tests/analyze/use-keyword-segment/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Unexpected token (keyword `let`). Expected an identifier.
> 4 | use std.let
              ^^^
